# BioZone6

./: CMakeLists.txt  ChangeList.txt  README.md  update_data.xml  version_prefix.txt
CMakeModules/: UtilsMacros.cmake  script_BuildInstall.cmake  script_BuildPackage.cmake  script_init_cmake.cmake
apps/: CMakeLists.txt
apps/BioZone6/: CMakeLists.txt  README.md  resources.qrc
apps/BioZone6/forms/: BioZone6_GUI.ui  tools.ui
apps/BioZone6/include/: BioZone6_GUI.h  Q_DebugStream.h  XmlProtocolReader.h  XmlProtocolWriter.h  chart.h  dataStructures.h  myQTled.h  protocolCommands.h  protocolEditorDelegates.h  protocolRunner.h  protocolTreeWidgetItem.h  tools.h  updater.h  xmlsyntaxhighlighter.h
apps/BioZone6/languages/: README.md  translateAll.bat
apps/BioZone6/presetProtocols/: button 1 fast coded.prt  faster off.prt  faster on.prt  pulsing 1 fast.prt
apps/BioZone6/presetProtocols/internal/: operational.prt  pumpSolution1.prt  pumpSolution2.prt  pumpSolution3.prt  pumpSolution4.prt  pumpSolution5.prt  pumpSolution6.prt  standby.prt  stopFlow.prt  stopSolution1.prt  stopSolution2.prt  stopSolution3.prt  stopSolution4.prt  stopSolution5.prt  stopSolution6.prt
apps/BioZone6/presetProtocols/internal/ButtonsPRTFiles/LargeAndRegular/: LnR-OFF-Button3.prt  LnR-ON-Button1.prt  OFF_Button2.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button3.prt  ON_Button4.prt
apps/BioZone6/presetProtocols/internal/ButtonsPRTFiles/LargeAndSlow/: LnS-OFF-Button3.prt  LnS-ON-Button3.prt  LnS-ON-Button6.prt  OFF_Button4.prt  ON_Button1.prt  ON_Button2.prt  ON_Button5.prt
apps/BioZone6/presetProtocols/internal/ButtonsPRTFiles/StandardAndRegular/: OFF_Button2.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button1.prt  ON_Button3.prt  ON_Button5.prt  ON_Button6.prt  SnR-ON-Button2.prt  SnR-ON-Button4.prt
apps/BioZone6/presetProtocols/internal/ButtonsPRTFiles/StandardAndSlow/: OFF_Button1.prt  OFF_Button2.prt  OFF_Button3.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button2.prt  ON_Button5.prt  ON_Button6.prt  SnS-ON-Button1.prt
apps/BioZone6/settings/: Ionoptix_tip_settings.ini  Standard_tip_settings.ini  UWZ_tip_settings.ini  Wide_tip_settings.ini  settings.ini  settings_IonOptix.ini
apps/BioZone6/src/: BioZone6_GUI.cpp  XmlProtocolReader.cpp  XmlProtocolWriter.cpp  chart.cpp  controls.cpp  main.cpp  ppc1Actions.cpp  ppc1OperModes.cpp  protocolCommands.cpp  protocolEditor.cpp  protocolEditorDelegates.cpp  protocolRunner.cpp  protocolTreeWidgetItem.cpp  solutions.cpp  toolbarActions.cpp  tools.cpp  updater.cpp  updates.cpp  xmlsyntaxhighlighter.cpp
apps/BioZone6/tips/IonOptix/presetProtocols/: button 1 fast coded.prt
apps/BioZone6/tips/IonOptix/presetProtocols/internal/: initialize.prt  standby.prt  stopFlow.prt
apps/BioZone6/tips/IonOptix/presetProtocols/internal/ButtonsPRTFiles/LargeAndRegular/: OFF_Button1.prt  OFF_Button2.prt  OFF_Button3.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button1.prt  ON_Button2.prt  ON_Button4.prt  ON_Button6.prt
apps/BioZone6/tips/IonOptix/presetProtocols/internal/ButtonsPRTFiles/LargeAndSlow/: OFF_Button1.prt  OFF_Button2.prt  OFF_Button3.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button1.prt  ON_Button2.prt  ON_Button3.prt  ON_Button4.prt  ON_Button5.prt  ON_Button6.prt
apps/BioZone6/tips/IonOptix/presetProtocols/internal/ButtonsPRTFiles/StandardAndRegular/: OFF_Button1.prt  OFF_Button2.prt  OFF_Button3.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button1.prt  ON_Button2.prt  ON_Button3.prt  ON_Button4.prt  ON_Button5.prt  ON_Button6.prt
apps/BioZone6/tips/IonOptix/presetProtocols/internal/ButtonsPRTFiles/StandardAndSlow/: OFF_Button1.prt  OFF_Button2.prt  OFF_Button3.prt  OFF_Button4.prt  OFF_Button5.prt  OFF_Button6.prt  ON_Button1.prt  ON_Button2.prt  ON_Button3.prt  (+3 more)
apps/BioZone6/tips/Standard/presetProtocols/: button 1 fast switch, standard run time, 3 repeats.prt  button 4 fast switch, standard run time, 3 repeats.prt  faster off.prt  faster on.prt  pulsing 1 fast.prt  pulsing 1-6 twice.prt  running solutions.prt
apps/BioZone6/tips/Standard/presetProtocols/internal/: initialize.prt  stopFlow.prt
apps/BioZone6/tips/UWZ/presetProtocols/: shutdown.prt
apps/BioZone6/tips/UWZ/presetProtocols/internal/: standby.prt
apps/BioZone6/tips/Wide/presetProtocols/: initialize without purge.prt  shutdown.prt
apps/BioZone6/tips/Wide/presetProtocols/internal/: initialize.prt  operational.prt  rampPon.prt  standby.prt  stopFlow.prt  tube_cleaning.prt
apps/BioZone6/tips/Wide/settings/: wide_tip_profile.ini
apps/serial_console/: BioZone_console.cpp  BioZone_console.h  BioZone_console.ui  CMakeLists.txt  main.cpp
docs/: Doxyfile_labonatip.in
libs/ppc1api6/: CMakeLists.txt
libs/ppc1api6/include/fluicell/ppc1api6/: ppc1api6.h  ppc1api6_data_structures.h
libs/ppc1api6/src/: ppc1api6.cpp
(+119 files in other folders)
